--- a/build.gradle
+++ b/build.gradle
@@ -17,16 +17,23 @@ repositories {
 def junitVersion = "5.3.1"
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
     implementation 'com.mixpanel:mixpanel-java:1.4.4'
+    implementation 'org.mongodb:mongo-java-driver:3.10.1'
+    implementation 'org.litote.kmongo:kmongo:3.9.2'
+    implementation 'io.github.microutils:kotlin-logging:1.4.9'
+
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'junit', module: 'junit'
     }
     testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
     testImplementation "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
     testImplementation "org.junit.jupiter:junit-jupiter-params:$junitVersion"
+    testImplementation("de.flapdoodle.embed:de.flapdoodle.embed.mongo:2.2.0")
+    testImplementation("com.nhaarman:mockito-kotlin:1.5.0")
 }
 
 test {
