--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation("org.litote.kmongo:kmongo:3.9.2")
     implementation("io.github.microutils:kotlin-logging:1.4.9")
     implementation('io.sentry:sentry-logback:1.7.21')
+    implementation('io.opentracing.contrib:opentracing-spring-jaeger-web-starter:2.0.2')
 
     testImplementation("org.springframework.boot:spring-boot-starter-test") {
         exclude group: "junit", module: "junit"
