--- a/deploy.yaml
+++ b/deploy.yaml
@@ -1,3 +1,4 @@
+---
 app: event-service
 port: 8080
 scale: Large
@@ -6,17 +7,10 @@ healthPath: /actuator/health
 environments:
   production:
     replicas: 2
-    urls:
-      - event-service.boclips.com
+    urls: []
   staging:
     replicas: 1
-    urls:
-      - event-service.staging-boclips.com
+    urls: []
   testing:
     replicas: 1
-    urls:
-      - event-service.testing-boclips.com
-  local:
-    replicas: 1
-    urls:
-      - event-service.local-boclips.com
+    urls: []
