--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,5 @@
-pluginManagement {
-	repositories {
-		gradlePluginPortal()
-	}
-}
-rootProject.name = 'event-service'
+rootProject.name = 'events'
+include 'event-service'
+include 'event-aggregator'
+include 'event-infrastructure'
+
