Surface both builds to a top-level pipeline
Signed-off-by: Sebastian Kazenbroot-Guppy <sebastian@boclips.com>

--- a/pipeline/tasks/build.yml
+++ b/pipeline/tasks/build.yml
@@ -14,5 +14,8 @@ inputs:
 outputs:
 - name: dist
 
+caches:
+- path: .gradle/
+
 run:
-  path: source/event-aggregator/pipeline/scripts/build.sh
+  path: source/pipeline/scripts/build.sh
