--- a/event-infrastructure/build.gradle
+++ b/event-infrastructure/build.gradle
@@ -13,8 +13,11 @@ repositories {
 }
 
 def junitVersion = "5.3.1"
+def lombokVersion = "1.18.12"
 
 dependencies {
+    compileOnly "org.projectlombok:lombok:$lombokVersion"
+    annotationProcessor "org.projectlombok:lombok:$lombokVersion"
     testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
     testImplementation "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
     testImplementation "org.junit.jupiter:junit-jupiter-params:$junitVersion"
