--- a/event-aggregator/build.gradle
+++ b/event-aggregator/build.gradle
@@ -29,3 +29,9 @@ task scalaTest(dependsOn: ['testClasses'], type: JavaExec) {
 }
 
 test.dependsOn scalaTest
+
+task copyLibs(type: Copy) {
+    from configurations.runtimeClasspath
+    into 'build/libs'
+}
+jar.finalizedBy(copyLibs)
