Write memory dumps on OOM to the dumps folder

--- a/event-aggregator/Dockerfile
+++ b/event-aggregator/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:8-jre-slim
 COPY build/libs/*.jar /opt/
 WORKDIR /opt
-CMD ["java", "-XX:+HeapDumpOnOutOfMemoryError","-XX:HeapDumpPath=/tmp/oom.bin", "-cp", "/opt/*", "com.boclips.event.aggregator.EventAggregatorApp"]
+CMD ["java", "-XX:+HeapDumpOnOutOfMemoryError","-XX:HeapDumpPath=/dumps/oom.hprof", "-cp", "/opt/*", "com.boclips.event.aggregator.EventAggregatorApp"]
