Add sentry appender

--- a/event-aggregator/src/main/resources/log4j.properties
+++ b/event-aggregator/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootCategory=INFO, console
+log4j.rootCategory=INFO, console, sentry
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.target=System.out
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
@@ -8,3 +8,6 @@ log4j.category.org.apache.hadoop=WARN
 log4j.category.org.apache.parquet=WARN
 log4j.category.org.spark_project=WARN
 log4j.category.breeze.optimize=WARN
+
+log4j.appender.sentry=io.sentry.log4j.SentryAppender
+log4j.appender.sentry.threshold=WARN
