--- a/event-aggregator/build.gradle
+++ b/event-aggregator/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     implementation "com.google.cloud.bigdataoss:bigquery-connector:hadoop3-1.1.3"
     implementation "com.google.cloud.bigdataoss:gcs-connector:hadoop3-2.1.3"
     implementation "org.scalactic:scalactic_2.12:3.0.5"
+    implementation "io.sentry:sentry-log4j:1.7.30"
 
     testImplementation 'org.scalatest:scalatest_2.12:3.0.5'
     testImplementation "de.flapdoodle.embed:de.flapdoodle.embed.mongo:2.2.0"
