Add native hadoop to event aggregator image

--- a/event-aggregator/Dockerfile
+++ b/event-aggregator/Dockerfile
@@ -1,3 +1,7 @@
 FROM openjdk:10-jre-slim
-COPY build/libs/*.jar /opt/
+ADD http://apache.mirror.anlx.net/hadoop/common/hadoop-3.2.1/hadoop-3.2.1.tar.gz /opt/hadoop/
+RUN tar -xzf /opt/hadoop/hadoop-3.2.1.tar.gz -C /opt/hadoop
+ENV HADOOP_HOME=/opt/hadoop/hadoop-3.2.1
+ENV LD_LIBRARY_PATH=$HADOOP_HOME/lib/native
+COPY build/libs/*.jar /opt/event-aggregator/
 WORKDIR /opt
