--- a/event-aggregator/build.gradle
+++ b/event-aggregator/build.gradle
@@ -4,6 +4,7 @@ plugins {
 
 repositories {
     mavenCentral()
+    maven { url "http://dl.bintray.com/spark-packages/maven" }
 }
 
 dependencies {
@@ -12,12 +13,15 @@ dependencies {
     implementation 'org.scala-lang:scala-library:2.12.11'
     implementation "org.apache.spark:spark-core_2.12:2.4.1"
     implementation "org.apache.spark:spark-sql_2.12:2.4.1"
+    implementation "org.apache.spark:spark-graphx_2.12:2.4.1"
     implementation "org.mongodb.spark:mongo-spark-connector_2.12:2.4.1"
     implementation "org.apache.commons:commons-math3:3.5"
     implementation "com.google.cloud.bigdataoss:bigquery-connector:hadoop3-1.1.3"
     implementation "com.google.cloud.bigdataoss:gcs-connector:hadoop3-2.1.3"
     implementation "org.scalactic:scalactic_2.12:3.0.5"
     implementation "io.sentry:sentry-log4j:1.7.30"
+    implementation "org.neo4j.driver:neo4j-java-driver:4.1.0"
+    implementation "neo4j-contrib:neo4j-spark-connector:2.4.5-M1"
 
     testImplementation 'org.scalatest:scalatest_2.12:3.0.5'
     testImplementation "de.flapdoodle.embed:de.flapdoodle.embed.mongo:2.2.0"
