--- a/event-aggregator/build.gradle
+++ b/event-aggregator/build.gradle
@@ -19,8 +19,9 @@ dependencies {
     implementation "org.scalactic:scalactic_2.12:3.0.5"
     implementation "io.sentry:sentry-log4j:1.7.30"
     implementation "org.neo4j.driver:neo4j-java-driver:4.0.2"
-    implementation "com.dimafeng:testcontainers-scala-scalatest_2.12:0.37.0"
-    implementation "com.dimafeng:testcontainers-scala-neo4j_2.12:0.37.0"
+    implementation "com.google.apis:google-api-services-youtube:v3-rev20200618-1.30.9"
+    compile group: 'com.google.oauth-client', name: 'google-oauth-client', version: '1.30.6'
+    compile group: 'com.google.oauth-client', name: 'google-oauth-client-jetty', version: '1.31.0'
 
     testImplementation 'org.scalatest:scalatest_2.12:3.0.5'
     testImplementation "de.flapdoodle.embed:de.flapdoodle.embed.mongo:2.2.0"
