Add YOUTUBE_API_KEY to envrc

--- a/.envrc
+++ b/.envrc
@@ -2,6 +2,7 @@ BIG_QUERY_SERVICE_ACCOUNT_KEY_PATH="$PWD/big-query-service-account-key"
 BIG_QUERY_PROJECT_ID="$(bo show credential concourse-main data-science.event-aggregator big-query-project-id)"
 BIG_QUERY_DATASET="$(bo show credential concourse-main data-science.event-aggregator big-query-dataset)"
 BIG_QUERY_LOAD_VIA_BUCKET="$(bo show credential concourse-main data-science.event-aggregator big-query-load-via-bucket)"
+YOUTUBE_API_KEY="$(bo show credential concourse-main data-science.event-aggregator youtube-api-key)"
 
 bo show credential concourse-main data-science.event-aggregator big-query-service-account-key > "$BIG_QUERY_SERVICE_ACCOUNT_KEY_PATH"
 
@@ -9,12 +10,14 @@ export BIG_QUERY_SERVICE_ACCOUNT_KEY_PATH
 export BIG_QUERY_PROJECT_ID
 export BIG_QUERY_DATASET
 export BIG_QUERY_LOAD_VIA_BUCKET
+export YOUTUBE_API_KEY
 
 {
   echo BIG_QUERY_SERVICE_ACCOUNT_KEY_PATH="$BIG_QUERY_SERVICE_ACCOUNT_KEY_PATH"
   echo BIG_QUERY_PROJECT_ID="$BIG_QUERY_PROJECT_ID"
   echo BIG_QUERY_DATASET="$BIG_QUERY_DATASET"
   echo BIG_QUERY_LOAD_VIA_BUCKET="$BIG_QUERY_LOAD_VIA_BUCKET"
+  echo YOUTUBE_API_KEY="$YOUTUBE_API_KEY"
 } > .env
 
 
