Use latest patched version of hadoop 3.2.x (3.2.2)
If this patch causes issues, we could instead switch the host to
archive.apache.org, which still hosts the 3.2.1 version.

--- a/event-aggregator/Dockerfile
+++ b/event-aggregator/Dockerfile
@@ -1,7 +1,8 @@
 FROM openjdk:10-jre-slim
-ADD https://downloads.apache.org/hadoop/common/hadoop-3.2.1/hadoop-3.2.1.tar.gz /opt/hadoop/
-RUN tar -xzf /opt/hadoop/hadoop-3.2.1.tar.gz -C /opt/hadoop && rm /opt/hadoop/hadoop-3.2.1.tar.gz
-ENV HADOOP_HOME=/opt/hadoop/hadoop-3.2.1
+ENV VERSION=3.2.2
+ENV HADOOP_HOME=/opt/hadoop/hadoop-$VERSION
+ADD https://downloads.apache.org/hadoop/common/hadoop-$VERSION/hadoop-$VERSION.tar.gz /opt/hadoop/
+RUN tar -xzf /opt/hadoop/hadoop-$VERSION.tar.gz -C /opt/hadoop && rm /opt/hadoop/hadoop-$VERSION.tar.gz
 ENV LD_LIBRARY_PATH=$HADOOP_HOME/lib/native
 COPY build/libs/*.jar /opt/event-aggregator/
 WORKDIR /opt
